--- a/DXMauiApp1/DXMauiApp1.csproj
+++ b/DXMauiApp1/DXMauiApp1.csproj
@@ -30,6 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="DevExpress.Maui.Charts" Version="23.1.3" />
 		<PackageReference Include="DevExpress.Maui.CollectionView" Version="23.1.3" />
 		<PackageReference Include="DevExpress.Maui.Core" Version="23.1.3" />
@@ -38,5 +39,17 @@
 		<PackageReference Include="DevExpress.Maui.Editors" Version="23.1.3" />
 		<PackageReference Include="DevExpress.Maui.Scheduler" Version="23.1.3" />
 		<TrimmableAssembly Include="DevExpress.Data.v23.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Pages\HomePage.xaml.cs">
+	    <DependentUpon>HomePage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 </Project>
